# iperf3Android

./: .gitignore  AGENTS.md  CLAUDE.md  CS683_JerryAbramson_Iperf3_network_tester.md  KMP_Migration_Plan.md  README.md  SEED.md  iPerf3 Network Performance Measurement Tool.docx  session-2026-06-08.md  session-ses_1676.md
Assets/: pullIperf3.sh  pushIperf3.sh
Code/: README.md  settings.gradle.kts
Code/Iperf3NetworkTester/: IPERF3_EXE.md  README.md  build.gradle.kts  commandLineBuildApp.md  diagram.md  planning.md  remove_binary_code.md  resumeOpenCode.txt  settings.gradle.kts
Code/Iperf3NetworkTester/app/: build.gradle.kts
Code/Iperf3NetworkTester/app/scripts/: pre-deploy.bat
Code/Iperf3NetworkTester/app/src/main/: AndroidManifest.xml  structure.md
Code/Iperf3NetworkTester/app/src/main/cpp/: CMakeLists.txt
Code/Iperf3NetworkTester/app/src/main/cpp/iperf/: iperf_config_android.h  iperf_jni.c
Code/Iperf3NetworkTester/app/src/main/cpp/iperf/iperf-3.19/: cjson.c  dscp.c  flowlabel.h  iperf.h  iperf_api.c  iperf_api.h  iperf_auth.c  iperf_client_api.c  iperf_config.h  iperf_sctp.c  iperf_server_api.c  iperf_util.h  t_timer.c  t_units.c  tcp_info.c  timer.c
Code/Iperf3NetworkTester/app/src/main/res/values/: strings.xml  (+1 more)
Code/Iperf3_network_tester/: AGENTS.md  README.md  commandLineBuildApp.md  session-ses_2ba1.md  settings.gradle.kts
Code/Iperf3_network_tester/app/: build.gradle.kts
Code/Iperf3_network_tester/app/scripts/: pre-deploy.bat  pre-deploy.sh
Code/Iperf3_network_tester/app/src/main/: AndroidManifest.xml
Code/Iperf3_network_tester/gradle/: libs.versions.toml
Code/Iperf3_network_tester/gradle/wrapper/: gradle-wrapper.properties
Code/app/: build.gradle.kts
Code/app/src/main/: AndroidManifest.xml
Code/app/src/main/res/values/: strings.xml  themes.xml
Code/gradle/wrapper/: gradle-wrapper.properties
Doc/: Attempt feedback.docx  CS683 Project Supplement.docx  CS683ProjectTemplate.docx  CS683_JerryAbramson_Iperf3_network_tester.md  README.md  logCatOutput.md  pre-deploy.md
Doc/AI/: 01_question.md  02_answer.md  03_question.md  android_icon_steps.json  android_icon_steps.md
Doc/BAK/: build.gradle.kts.emulator
Doc/iperf3Bundling/: AGENTS.md  gradleTips.md  modelCard.txt
(+89 files in other folders)
